--- a/appsettings.json
+++ b/appsettings.json
@@ -1,10 +1,13 @@
 {
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
-"AllowedHosts": "*"
+    }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "dotnet_reactAPI": "Data Source=dotnet_reactAPI-441a2539-2bef-4077-a2e6-bd74e963f85f.db"
+  }
 }
